--- a/hugo.toml
+++ b/hugo.toml
@@ -59,6 +59,10 @@ style = "github-dark"
   weight = 3
   url = "https://www.linkedin.com/in/superoo7/"
 
+# Analytics
+[params.goatCounter]
+  code = "superoo7"
+
 # Menu links
 [[menu.main]]
   name = "About"
@@ -68,3 +72,5 @@ style = "github-dark"
   name = "Blog"
   weight = 2
   url  = "posts/"
+
+  
