fix css not being loaded

--- a/hugo.toml
+++ b/hugo.toml
@@ -33,7 +33,7 @@ style = "github-dark"
   colorScheme = "auto"
   hidecolorschemetoggle = false
 
-  # customCss = ["css/custom.css"]
+  customCss = ["css/custom.css"]
   # customSCSS = ["scss/custom.scss"]
   # customJS = ["js/custom.js"]
 
