--- a/hugo.toml
+++ b/hugo.toml
@@ -33,8 +33,8 @@ style = "github-dark"
   colorScheme = "auto"
   hidecolorschemetoggle = false
 
-  customCss = ["css/custom.css"]
-  # customSCSS = ["scss/custom.scss"]
+  # customCss = ["css/custom.css"]
+  customSCSS = ["scss/custom.scss"]
   # customJS = ["js/custom.js"]
 
 [taxonomies]
