--- a/hugo.toml
+++ b/hugo.toml
@@ -4,7 +4,8 @@ theme = "hugo-coder"
 languagecode = "en"
 defaultcontentlanguage = "en"
 
-paginate = 20
+[pagination]
+pagerSize = 20
 
 [services]
 [services.disqus]
@@ -37,6 +38,12 @@ style = "github-dark"
   # customCss = ["css/custom.css"]
   customSCSS = ["scss/custom.scss"]
   customJS = ["js/custom.js"]
+
+  # Pagination settings
+  pagerSize = 20
+
+  # Ignore specific logs
+  ignoreLogs = ['shortcode-twitter-getremote', 'shortcode-x-getremote']
 
 [taxonomies]
   category = "categories"
